Added labels to plots

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -109,7 +109,7 @@
                         .attr("r", 3)
                         .attr("cx", function(d,i) { return xChart1(d.daynumber,d.hour,d.minute) })
                         .attr("cy", function(d) { return h-(d.distance-50)/3 })
-                        .attr("class","chart1")              
+                        .attr("class",function(d) { return "chart1 " + d.daynumber + d.hour + d.minute })
                     .append("svg:title")
                         .text(function(d) { return "Day " + d.daynumber + ", " + d.hour + ":" + d.minute + " => " + d.distance})
 
@@ -123,7 +123,7 @@
                         .attr("x1", function(d) { return ((d-8)*60)/3})
                         .attr("x2", function(d) { return ((d-8)*60)/3})
                         .attr("y1", 0)
-                        .attr("y2", h)
+                        .attr("y2", h-15)
                         .attr("class","chart2vgrid")
             chart2.selectAll(".chart2")
                     .data(d)
@@ -131,10 +131,17 @@
                     .append("circle")
                         .attr("r", 3)
                         .attr("cx", function(d,i) { return xChart2(d.hour,d.minute) })
-                        .attr("cy", function(d) { return h-(d.distance-50)/3 })
+                        .attr("cy", function(d) { return h-15-(d.distance-50)/3 })
                         .attr("class","chart2")
                     .append("svg:title")
                         .text(function(d) { return d.hour + ":" + d.minute + " => " + d.distance})
+            chart2.selectAll("text")
+                    .data([8,9,10,11,12,13,14,15,16,17,18,19,20])
+                    .enter()
+                    .append("text")
+                        .attr("dx", function(d,i) { return (60/3)*i - 5 })
+                        .attr("dy", h)
+                        .text(function(d) { return d })
         })
 
         d3.csv("../distance_log.csv", function(d) {
@@ -149,7 +156,7 @@
                         .attr("x1", function(d) { return ((d[0]*720)+(d[1]-8)*60)/5})
                         .attr("x2", function(d) { return ((d[0]*720)+(d[1]-8)*60)/5})
                         .attr("y1", 0)
-                        .attr("y2", h)
+                        .attr("y2", h-15)
                         .attr("class","chart3vgrid")
             chart3.selectAll(".chart3")
                     .data(d)
@@ -157,10 +164,17 @@
                     .append("circle")
                         .attr("r", 3)
                         .attr("cx", function(d,i) { return xChart3(d.dayofweek,d.hour,d.minute) })
-                        .attr("cy", function(d) { return h-(d.distance-50)/3 })
+                        .attr("cy", function(d) { return h-15-(d.distance-50)/3 })
                         .attr("class","chart3")
                     .append("svg:title")
                         .text(function(d) { return d.dayofweek + " " + d.hour + ":" + d.minute + " => " + d.distance})
+            chart3.selectAll("text")
+                    .data(["Mon","Tue","Wed","Thu","Fri"])
+                    .enter()
+                    .append("text")
+                        .attr("dx", function(d,i) { return 50 + (750/5)*i })
+                        .attr("dy", h)
+                        .text(function(d) { return d })
         })
 	</script>
 </body>
